# cookiecutter-django-rest

./: README.md  cookiecutter.json
{{cookiecutter.github_repository_name}}/: Dockerfile  Makefile  README.md  compose.services.yaml  compose.yml  entrypoint.sh  pyproject.toml
{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/: celery.py  settings.py  wsgi.py
{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/config/: common.py  local.py
