[tool.poetry]
name = "{{cookiecutter.github_repository_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
packages = [
    { include = "{{cookiecutter.app_name}}" }
]
authors = ["{{cookiecutter.github_username}} <{{cookiecutter.email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
Django= "^5.1.5"
django-configurations = "^2.5.1"
gunicorn = "^23.0.0"
newrelic = "^10.3.1"
setuptools = "^75.6.0"
requests = "^2.31.0"
pillow = "^11.1.0"
spectacular = "^0.28.0"

psycopg2-binary = "^2.9.10"
dj-database-url = "^2.3.0"
python-decouple = "^3.8"


django-model-utils = "^5.0.0"
django_unique_upload = "^0.2.1"
celery = "^5.4.0"
django-cors-headers = "^4.4.0"
jsonpath-ng = "^1.6.1"

djangorestframework = "^3.15.2"
django-filter = "^24.3"

sentry-sdk = {extras = ["django"], version = "^2.11.0"}

mock = "^5.1.0"
factory-boy = "^3.3.1"
pytest-django = "^4.9.0"
coverage = "^7.6.9"

django-storages = "^1.14.4"
boto3 = "^1.35.76"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
pydevd-pycharm = ">=232.8660.185,<232.8661.0"
coverage = "^7.5.0"
debugpy = "^1.8.7"
ipdb = "^0.13.13"
ipython = "^8.30.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
